--- a/site/src/views/index.html
+++ b/site/src/views/index.html
@@ -6,10 +6,11 @@
 
     <title>Calathea</title>
 
-    <link href="css/styles2.css" rel= "stylesheet">
+  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/72a545861a.js" crossorigin="anonymous"></script>
+    <link href="css/styles2.css" rel= "stylesheet">
 
 </head>
 
@@ -57,9 +58,9 @@
                             <ul class="nav">
                                 <li><a href="/" class="active">Inicio</a></li>
                                 <li><a href="/product">Productos</a></li>
-                                <li><a href="">Quiénes Somos</a></li>
+                                <li><a href="/quienes-somos">Quiénes Somos</a></li>
                                 <li><a href="">Preguntas Frecuentes</a></li>
-                                <li><a href="">Contacto</a></li>
+                                <li><a href="/contacto">Contacto</a></li>
                             </ul>
                     </nav>
                 </div>
