--- a/site/src/views/productDetail.html
+++ b/site/src/views/productDetail.html
@@ -57,9 +57,9 @@
                          <ul class="nav">
                              <li><a href="/" class="active">Inicio</a></li>
                              <li><a href="/product">Productos</a></li>
-                             <li><a href="">Quiénes Somos</a></li>
+                             <li><a href="/quienes-somos">Quiénes Somos</a></li>
                              <li><a href="">Preguntas Frecuentes</a></li>
-                             <li><a href="">Contacto</a></li>
+                             <li><a href="/contacto">Contacto</a></li>
                          </ul>
                  </nav>
              </div>
@@ -67,7 +67,7 @@
  </header>
    
 
-    <div class="menu-horizontal-pd"><a class = "a-pd" href="/" > Inicio /</a><a class = "a-pd" href="/">Productos /</a> <a class = "a-pd" href="/">Planta interior /</a> <a class = "a-pd" href="#"><strong>Combo Philodendron Elegans m14 en Premium 18</strong></a></div>
+    <div class="menu-horizontal-pd"><a class = "a-pd" href="/" > Inicio /</a><a class = "a-pd" href="/product">Productos /</a> <a class = "a-pd" href="/products">Planta interior /</a> <a class = "a-pd" href="#"><strong>Combo Philodendron Elegans m14 en Premium 18</strong></a></div>
 
  <main>
     <!-- MAIN PAGINA DE PRODUCTOS DETALLADOS-->
@@ -122,7 +122,7 @@
 
         <button type="submit" class="boton-agregar-pd">Agregar a Carrito</button>
 
-        <p>Si ya agregaste este producto podras ir a <a class = "a-pd"href="#">mi carrito</a></p>
+        <p>Si ya agregaste este producto podras ir a <a class = "a-pd"href="/productCart">mi carrito</a></p>
 
 
     </section>
@@ -177,10 +177,10 @@
 
 <div class="footer-bottom">
         <a href="/">Inicio</a>  
-        <a href="">Productos</a>  
-        <a href="">Quiénes Somos</a>  
+        <a href="//product">Productos</a>  
+        <a href="/quienes-somos">Quiénes Somos</a>  
         <a href="">Preguntas Frecuentes</a> 
-        <a href="">Contacto</a>
+        <a href="/contacto">Contacto</a>
     </ul>
 </div>
 
