--- a/site/src/views/products.html
+++ b/site/src/views/products.html
@@ -76,7 +76,7 @@
                 <input class= "input-nav-productos" type="text" name="search" id= "search" placeholder="Buscar...">
             </div>
  
-    <div class="container-productos">
+    
         <!--MENU HORIZONTAL-->
     <section class="Contenedor-menu-lista">
         <div class="menu-horizontal"><a href="/" > Inicio /</a> <a href="/productos"><strong>Productos</strong></a></div>
@@ -96,16 +96,27 @@
         </div>
     </section>
 
-        
-
+      <div class="container-productos">
+      <!-- MENU DE CATEGORIAS Y FILTRO-->
+        <div class="div-izquierdo-productos">
+                        <h2>Categorias</h2>
+                        <ul class="lista-categorias-productos">
+                            <li><a href="#">Planta Inerior</a></li>
+                            <li><a href="#">Planta Exterior</a></li>
+                            <li><a href="#">Planta Macetas</a></li>
+                            <li><a href="#">Planta Accesorios</a></li>
+                            <li><a href="#">Planta Fertilizante</a></li>
+                        </ul>
+                        <br>
+                        <h2> Filtos </h2>
+        </div>
                 <!--LISTADO DE PRODUCTOS-->
 
     <section class="products">
 
                 <article class="products-container">
 
-
-            <div class="desciption-product">
+                <div class="desciption-product">
                 <a href ="/productDetail"><img src="images/plantas/interior/anthurium - m15.png" alt="Plantas de Interior"></a>
                 <h4 class="name">Anthurium</h4>
                 <p class="price">$550</p>
