--- a/site/src/views/register.html
+++ b/site/src/views/register.html
@@ -95,50 +95,60 @@
 
   <!--FOOTER-->
     
-    <footer>
-        <div class="footer">
+  <footer>
+    <div class="footer-top">
+        <div class= footer-top-main>
+            <div class= "cont-footer">
+                <span class="titulo-footer">CONTACTANOS</span>
+                <ul>
+                    <li><i class="fas fa-phone"></i> +54 11 *******</li>
+                    <li><i class="fab fa-whatsapp"></i> +54 11 *****</li>
+                    <li><i class="fas fa-at"></i> contacto@calathea.com.ar</li>
+                    <li><i class="fas fa-map-marker-alt"></i> Showroom: Amenábar 4587 2 "D". <br>Sucursal Palermo: Ravignani 5498, Capital Federal</li>
+                </ul>
+            </div>
+            
+            <div class="cont-footer">
+                <span class="titulo-footer">MEDIOS DE PAGO</span>
+                <ul class="medios-de-pago">
+                    <li><img width= 50px heigth= 50px src= "images/visa.jpg"></li>
+                    <li><img width= 50px heigth= 50px src= "images/mastecard.jpg"></li>
+                    <li><img width= 50px heigth= 50px src= "images/american.jpg"></li>
+                    <!--
+                    <li><img width= 50px heigth= 50px src= "images/pagofacil.png"></li>
+                    <li><img width= 50px heigth= 50px src= "images/rapipago.jpg"></li>
+                    <li><img width= 50px heigth= 50px src= "images/mercadopago.jpeg"></li>-->
+                </ul>
+            </div>
+            <div class="cont-footer">
+                <span class="titulo-footer">REDES SOCIALES</span>
+                <ul id="footer-rd">
+                    <li><i class="fab fa-instagram"> <a href="http://instagram.com" target="_blank"> Calathea</a></i></li>
+                    <li><i class="fab fa-facebook"><a href="http://facebook.com" target="_blank"></i> Somos Calathea </a></li>
+                </ul>
+            </div>
 
-            <ul class ="nav-footer">
-                <li><strong>Navegación</strong></li>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Productos</a></li>
-                <li><a href="">Quiénes Somos</a></li>
-                <li><a href="">Preguntas Frecuentes</a></li>
-                <li><a href="">Contacto</a></li>
-            </ul>
-            <ul class= "cont-footer">
-                <li><strong>Contactanos</strong></li>
-                <li><i class="fas fa-phone"></i> +54 11 *******</li>
-                <li><i class="fab fa-whatsapp"></i> +54 11 *****</li>
-                <li><i class="fas fa-at"></i> contacto@calathea.com.ar</li>
-                <li><i class="fas fa-map-marker-alt"></i> Showroom: Amenábar 4587 2 "D". Sucursal Palermo: Ravignani 5498, Capital Federal</li>
-            </ul>
-            <ul class="footer-mdp1">
-                <li><strong>Medios de pago</strong></li>
-            </ul>
-            <ul class="footer-mdp">
-                <li><img width= 50px heigth= 50px src= "images/visa.jpg"></li>
-                <li><img width= 50px heigth= 50px src= "images/mastecard.jpg"></li>
-                <li><img width= 50px heigth= 50px src= "images/american.jpg"></li>
-            </ul>
-            <ul class="footer-mdp">
-                <li><img width= 50px heigth= 50px src= "images/pagofacil.png"></li>
-                <li><img width= 50px heigth= 50px src= "images/rapipago.jpg"></li>
-                <li><img width= 50px heigth= 50px src= "images/mercadopago.jpeg"></li>
-            </ul>
-            <ul id="footer-rd">
-                <li><strong>REDES SOCIALES</strong></li>
-                <li><i class="fab fa-instagram"> @calathea</i></li>
-                <li><i class="fab fa-facebook"></i> Somos calathea</li>
-                <li></li>
-                <li><form action="" method="POST">
-                    <label for="newsletter" id="newsletter"><strong>NEWSLETTER</strong>
-                    <br>
-                    <input type="email" name="newsletter"> 
-                </form> </li>
-            </ul>
+            <div class="cont-footer">
+                <form action="" method="POST">
+                    <div class="titulo-footer">NEWSLETTER</div>
+                    <label for="newsletter" id="newsletter">
+                    <input class= "cont-footer-input" type="email" name="newsletter" placeholder="   Recibí novedades!"> 
+                </form> 
+            </div>
+
         </div>
-    </footer>
+    </div>
+
+    <div class="footer-bottom">
+            <a href="/">Inicio</a>  
+            <a href="">Productos</a>  
+            <a href="">Quiénes Somos</a>  
+            <a href="">Preguntas Frecuentes</a> 
+            <a href="">Contacto</a>
+        </ul>
+    </div>
+
+</footer>
 
     </body>
 </html>
