agregue formulario de edicion de productos

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -20,7 +20,7 @@
              <ul>
                  <li><a href="/login"><i class="fas fa-user"></i> Iniciar sesión</a></li>
                  <li><a href="/register"><i class="fas fa-user-plus"></i> Registrarse</a></li>
-                 <li><a href="/productCart"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
+                 <li><a href="/Cart"><i class="fas fa-shopping-cart"></i> Carrito</a></li>
              </ul>
          </div>
      
@@ -41,7 +41,7 @@
                          <li><a href="/" class="active">Inicio</a></li>
                          <li><a href="/products">Productos</a></li>
                          <li><a href="/quienes-somos">Quiénes Somos</a></li>
-                         <li><a href="">Preguntas Frecuentes</a></li>
+                         <li><a href="/preguntas-frecuentes">Preguntas Frecuentes</a></li>
                          <li><a href="/contacto">Contacto</a></li>
                      </ul>
              </nav>
