--- a/site/src/views/home/index.ejs
+++ b/site/src/views/home/index.ejs
@@ -25,22 +25,22 @@
         <br>
         <section class= "opciones-catalogo">
             <section class= "opcion" id= "opcion1">
-                <p class="titulo-opcion"><a href="/product" >PLANTAS INTERIOR</a></p>
+                <p class="titulo-opcion"><a href="/productos" >PLANTAS INTERIOR</a></p>
             </section>
             <section class= "opcion" id= "opcion2">
-                <p class="titulo-opcion"><a href= "/product">PLANTAS EXTERIOR</a></p>
+                <p class="titulo-opcion"><a href= "/productos">PLANTAS EXTERIOR</a></p>
             </section>
             <section class= "opcion" id= "opcion3">
-                <p class="titulo-opcion"><a href= "/product">DECO</a></p>
+                <p class="titulo-opcion"><a href= "/productos">DECO</a></p>
             </section>
             <section class= "opcion" id= "opcion4">
-                <p class="titulo-opcion"><a href= "/product">MACETAS</a></p>
+                <p class="titulo-opcion"><a href= "/productos">MACETAS</a></p>
             </section>
             <section class= "opcion" id= "opcion5">
-                <p class="titulo-opcion"><a href= "/product">ACCESORIOS</a></p>
+                <p class="titulo-opcion"><a href= "/productos">ACCESORIOS</a></p>
             </section>
             <section class= "opcion" id= "opcion6">
-                <p class="titulo-opcion"><a href= "/product">FERTILIZANTES</a></p>
+                <p class="titulo-opcion"><a href= "/productos">FERTILIZANTES</a></p>
             </section>
         </section>
         <p class="titulo-pd">PRODUCTOS DESTACADOS</p>
