--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -30,16 +30,16 @@
          <div class="search-box">
              <form action="" method="POST">                        
                      <input type="text" name="search" placeholder="Buscar">
-             </form>
-             <button><i class="fas fa-search"></i>
-             </button>
+                     <i class="fas fa-search"></i> 
+                </form>
+             
          </div>
      
          <div class="nav-bar">
              <nav class="nav-bar">
                      <ul class="nav">
-                         <li><a href="/" class="active">Inicio</a></li>
-                         <li><a href="/products">Productos</a></li>
+                         <li><a href="/">Inicio</a></li>
+                         <li><a href="/productos">Productos</a></li>
                          <li><a href="/quienes-somos">Quiénes Somos</a></li>
                          <li><a href="/preguntas-frecuentes">Preguntas Frecuentes</a></li>
                          <li><a href="/contacto">Contacto</a></li>
