--- a/site/src/views/products/products.ejs
+++ b/site/src/views/products/products.ejs
@@ -44,16 +44,14 @@
       <div class="container-productos">
       <!-- MENU DE CATEGORIAS Y FILTRO-->
         <div class="div-izquierdo-productos">
-                        <h2>Categorias</h2>
-                        <ul class="lista-categorias-productos">
-                            <li><a href="#">Planta Inerior</a></li>
-                            <li><a href="#">Planta Exterior</a></li>
-                            <li><a href="#">Planta Macetas</a></li>
-                            <li><a href="#">Planta Accesorios</a></li>
-                            <li><a href="#">Planta Fertilizante</a></li>
-                        </ul>
-                        <br>
-                        <h2> Filtos </h2>
+                        <p>Categorias</p>
+                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Planta Inerior</label><br>
+                        <label><input type="checkbox" id="cbox1" value="first_checkbox"> Planta Exterior</label><br>
+                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Macetas</label><br>
+                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Accesorios</label><br>
+                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Fertilizante</label><br>
+                       
+
         </div>
                 <!--LISTADO DE PRODUCTOS-->
 
