agregamos carpeta data

--- a/site/src/views/home/index.ejs
+++ b/site/src/views/home/index.ejs
@@ -15,10 +15,12 @@
     <main>
         <section class= "hero">
             <div class= "hero-container">
-                <span><a class= "hero-texto" href= "">PROMOCIONES EXCLUSIVAS</a></span>
-                <div class= "flechas">
-                <a id= "flecha-izquierda" href= ""><i class="fas fa-angle-left"></i></a>
-                <a id= "flecha-derecha" href= ""><i class="fas fa-angle-right"></i></a>
+            <ul> 
+                <li><img src="../img-1.jpg" alt=""></li>
+                <li><img src="../img-2.jpg" alt=""></li>
+                <li><img src="../img-3.jpg" alt=""></li>
+                <li><img src="../img-4.jpg" alt=""></li>
+            </ul>
                 </div>
             </div>
         </section>
