Actualicé la retro, el tablero y agregué los JSON de usuarios y productos

--- a/site/src/views/products/products.ejs
+++ b/site/src/views/products/products.ejs
@@ -60,7 +60,7 @@
                 <article class="products-container">
 
                 <div class="desciption-product">
-                <a href ="/productos/detail"><img src="images/plantas/interior/anthurium - m15.png" alt="Plantas de Interior"></a>
+                <a href ="/productos/detalle"><img src="images/plantas/interior/anthurium - m15.png" alt="Plantas de Interior"></a>
                 <h4 class="name">Anthurium</h4>
                 <p class="price">$550</p>
                 <p class="dues">6 cuotas de $300</p>
