--- a/site/src/views/products/products2.ejs
+++ b/site/src/views/products/products2.ejs
@@ -42,35 +42,23 @@
         </div>
     </section>
 
-      <div class="container-productos">
-      <!-- MENU DE CATEGORIAS Y FILTRO-->
-        <div class="div-izquierdo-productos">
-                        <p>Categorias</p>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Planta Inerior</label><br>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox"> Planta Exterior</label><br>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Macetas</label><br>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Accesorios</label><br>
-                        <label><input type="checkbox" id="cbox1" value="first_checkbox">Fertilizante</label><br>
-                       
 
-        </div>
-                <!--LISTADO DE PRODUCTOS-->
-
+    <!--LISTADO DE PRODUCTOS-->
     <section class="products">
         <% productos.forEach (producto => { %>
             <article class="products-container">
-                <div class="desciption-product">
+                <div class="description-product">
                     <a href ="/productos/detalle"><img src= "images/productos/<%= producto.imagen %>" alt="Plantas de Interior" enctype= ></a>
                     <h4 class="name"><%= producto.nombre %></h4>
-                    <p class="price">$<%= producto.precio %> </p>
+                    <p class="price">$<%= producto.precio %></p>
                 </div>
             </article>
         <% })%> 
     </section>
-        
-    </main>
 
-</div>
+
+    </div>  
+    </main>
 
            <!-- PARTIAL DEL FOOTER-->
 <%-include ("../partials/footer.ejs") %>
