--- a/site/src/views/users/register.ejs
+++ b/site/src/views/users/register.ejs
@@ -24,7 +24,7 @@
 
             <div class="fomulario-div-fr">
                 <label for="name"><strong>NOMBRE</strong></label>
-                <input type="text" name="name" id="name" placeholder ="  EJ: Juan Perez" class="formulario-input-fr">
+                <input type="text" name="name" id="name" placeholder ="  EJ: Lionel Messi" class="formulario-input-fr">
             </div> 
             <div class="fomulario-div-fr">  
                 <label for="email"><strong>EMAIL</strong></label>
